<resources>
    <string name="app_name">Students</string>
    <string name="new_faculty">Добавить</string>
    <string name="names">Name</string>
    <string name="cancel">Отмена</string>
    <string name="commit">Подтверждение</string>
    <string name="inputTitle">Укажите значение</string>
    <string name="inputFaculty">Наименование факультета</string>
    <string name="inputGroup">Номер группы</string>
    <string name="Имя">Имя</string>
    <string name="Фамилия">Фамилия</string>
    <string name="Отчество">Отчество</string>
    <string name="Телефон">Телефон</string>
    <string name="Дата">Дата рождения</string>
    <string name="Вводф">Введите фамилию</string>
    <string name="Вводо">Введите отчество</string>
    <string name="Вводт">Введите телефон</string>
    <string name="Вводи">Введит имя</string>
    <string name="tableLoyotgrup">Список групп</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_student">Добавить студента</string>
    <string name="edit_button">edit_button</string>
    <string name="delete_button">delete_button</string>
    <string name="textview">TextView</string>
</resources>