<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StudentFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/Фамилия"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/elLastName"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/Вводф"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/Имя"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/elFirstName"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/Вводи"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/elLastName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Отчество"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/Телефон"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/elMiddleName"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Вводо"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/elFirstName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/elPhone"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/Вводт"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/elMiddleName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/Дата"
        app:layout_constraintBottom_toBottomOf="@+id/dpCalendar"
        app:layout_constraintEnd_toStartOf="@+id/dpCalendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dpCalendar" />

    <DatePicker
        android:id="@+id/dpCalendar"
        style="@android:style/Widget.DatePicker"

        android:layout_width="246dp"
        android:layout_height="116dp"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:calendarViewShown="false"
        android:clickable="false"
        android:layerType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>